# Cobalt

./: .gitignore  CMakeLists.txt  precedence.txt
hooks/: pre-commit
src/: main.c
src/backend/: code_gen.c  code_gen.h
src/frontend/: parser.c  parser.h  scanner.c  scanner.h  token.c  token.h
src/ir/: basic_block.c  basic_block.h  cfg.c  cfg.h  expr.c  expr.h
src/utils/: constants.h  hash_map.c  hash_map.h  list.c  list.h  stack.c  stack.h
tests/: run_tests.py
tests/testfiles/not_implemented_yet/: mult_assign_with_expr.c
tests/testfiles/passing/arithmetic_ops/: 01_var_decl.c  02_var_assignment.c  03_var_doesnt_exist.c  04_mult_var_decl.c  05_assign_var_to_var.c  06_mult_assign.c  07_invalid_assignment.c  09_basic_addition.c  10_basic_subtraction.c  11_basic_multiplication.c  15_division.c  16_modulo.c  17_complex_expression.c  18_complex_expression.c  19_complex_expression.c  20_bitwise.c  21_bitwise.c  22_bitwise.c  23_shift.c  24_shit.c  25_shift.c
tests/testfiles/passing/comments/: 01_single_line.c  02_multi_line.c  03_single_line_end.c  04_multi_line_end.c
tests/testfiles/passing/control_flow/: 01_multiple_blocks.c  02_multiple_blocks.c  03_multiple_blocks.c
